UPGRADE - adicionada a validação por jwt
