# routes/web.php
@@ -16,3 +16,8 @@ use Illuminate\Support\Facades\Route;
 Route::get('/', function () {
     return view('welcome');
 });
+
+
+Route::get('/login', function () {
+    return response()->json(['message' => 'forbidden'], 403, ['Content-Type' => 'application/json']);
+})->name('login');
